imageflow.h

typedef enum flow_edge_type {
    flow_edgetype_null,
    flow_edgetype_input,
    flow_edgetype_canvas,
    flow_edgetype_info,
    flow_edgetype_FORCE_ENUM_SIZE_INT32 = 2147483647
} flow_edge_type;
typedef enum flow_compositing_mode {
    flow_compositing_mode_overwrite,
    flow_compositing_mode_compose,
    flow_compositing_mode_blend_with_matte
} flow_compositing_mode;
struct flow_job;
struct flow_scanlines_filter;
struct flow_scanlines_filter {
    flow_scanlines_filter_type type;
    struct flow_scanlines_filter* next;
};
struct flow_graph {
    uint32_t memory_layout_version; // This progresses differently from the library version, as internals are subject to
    // refactoring. If we are given a graph to copy, we check this number.
    struct flow_edge* edges;
    int32_t edge_count;
    int32_t next_edge_id;
    int32_t max_edges;

    struct flow_node* nodes;
    int32_t node_count;
    int32_t next_node_id;
    int32_t max_nodes;

    uint8_t* info_bytes;
    int32_t max_info_bytes;
    int32_t next_info_byte;
    int32_t deleted_bytes;

    float growth_factor;
};
struct flow_graph* flow_graph_create(Context* c, uint32_t max_edges, uint32_t max_nodes, uint32_t max_info_bytes,
                                     float growth_factor);
void flow_graph_destroy(Context* c, struct flow_graph* target);
bool flow_graph_replace_if_too_small(Context* c, struct flow_graph** g, uint32_t free_nodes_required,
                                     uint32_t free_edges_required, uint32_t free_bytes_required);
struct flow_graph* flow_graph_copy_and_resize(Context* c, struct flow_graph* from, uint32_t max_edges,
                                              uint32_t max_nodes, uint32_t max_info_bytes);
int32_t flow_graph_copy_info_bytes_to(Context* c, struct flow_graph* from, struct flow_graph** to, int32_t byte_index,
                                      int32_t byte_count);
int32_t flow_edge_duplicate(Context* c, struct flow_graph** g, int32_t edge_id);
/*
 * flow_Graph
 * flow_Node
 * flow_Edge
 * flow_edge_type
 * flow_ntype
 *
 * flow_node_create_canvas
 * flow_
 */

int32_t flow_node_create_canvas(Context* c, struct flow_graph** g, int32_t prev_node, BitmapPixelFormat format,
                                size_t width, size_t height, uint32_t bgcolor);
int32_t flow_node_create_scale(Context* c, struct flow_graph** g, int32_t prev_node, size_t width, size_t height);
int32_t flow_node_create_primitive_flip_vertical(Context* c, struct flow_graph** g, int32_t prev_node);
int32_t flow_node_create_primitive_flip_horizontal(Context* c, struct flow_graph** g, int32_t prev_node);
int32_t flow_node_create_clone(Context* c, struct flow_graph** g, int32_t prev_node);
int32_t flow_node_create_transpose(Context* c, struct flow_graph** g, int32_t prev_node);
int32_t flow_node_create_rotate_90(Context* c, struct flow_graph** g, int32_t prev_node);
int32_t flow_node_create_rotate_180(Context* c, struct flow_graph** g, int32_t prev_node);
int32_t flow_node_create_rotate_270(Context* c, struct flow_graph** g, int32_t prev_node);
int32_t flow_node_create_resource_placeholder(Context* c, struct flow_graph** g, int32_t prev_node,
                                              int32_t output_slot_id);
int32_t flow_node_create_resource_bitmap_bgra(Context* c, struct flow_graph** graph_ref, int32_t prev_node,
                                              BitmapBgra** ref);
int32_t flow_node_create_primitive_copy_rect_to_canvas(Context* c, struct flow_graph** g, int32_t prev_node,
                                                       uint32_t from_x, uint32_t from_y, uint32_t width,
                                                       uint32_t height, uint32_t x, uint32_t y);
int32_t flow_node_create_primitive_crop(Context* c, struct flow_graph** g, int32_t prev_node, uint32_t x1, uint32_t x2,
                                        uint32_t y1, uint32_t y2);
int32_t flow_node_create_render_to_canvas_1d(Context* c, struct flow_graph** g, int32_t prev_node,
                                             bool transpose_on_write, uint32_t canvas_x, uint32_t canvas_y,
                                             int32_t scale_to_width, WorkingFloatspace scale_and_filter_in_colorspace,
                                             float sharpen_percent, flow_compositing_mode compositing_mode,
                                             uint8_t* matte_color[4], struct flow_scanlines_filter* filter_list,
                                             InterpolationFilter interpolation_filter);
bool flow_node_delete(Context* c, struct flow_graph* g, int32_t node_id);
bool flow_edge_delete(Context* c, struct flow_graph* g, int32_t edge_id);
bool flow_edge_delete_all_connected_to_node(Context* c, struct flow_graph* g, int32_t node_id);
int32_t flow_graph_get_inbound_edge_count_of_type(Context* c, struct flow_graph* g, int32_t node_id,
                                                  flow_edge_type type);
int32_t flow_graph_get_first_inbound_edge_of_type(Context* c, struct flow_graph* g, int32_t node_id,
                                                  flow_edge_type type);
bool flow_edge_has_dimensions(Context* c, struct flow_graph* g, int32_t edge_id);
bool flow_node_input_edges_have_dimensions(Context* c, struct flow_graph* g, int32_t node_id);
bool flow_graph_duplicate_edges_to_another_node(Context* c, struct flow_graph** graph_ref, int32_t from_node,
                                                int32_t to_node, bool copy_inbound, bool copy_outbound);
int32_t flow_edge_create(Context* c, struct flow_graph** g, int32_t from, int32_t to, flow_edge_type type);
typedef bool (*flow_graph_visitor)(Context* c, struct flow_job* job, struct flow_graph** graph_ref, int32_t id,
                                   bool* quit, bool* skip_outbound_paths, void* custom_data);
bool flow_graph_walk(Context* c, struct flow_job* job, struct flow_graph** graph_ref, flow_graph_visitor node_visitor,
                     flow_graph_visitor edge_visitor, void* custom_data);
struct flow_nodeinfo_render_to_canvas_1d {
    // There will need to be consistency checks against the createcanvas node

    InterpolationFilter interpolation_filter;
    // InterpolationDetails * interpolationDetails;
    int32_t scale_to_width;
    uint32_t canvas_x;
    uint32_t canvas_y;
    bool transpose_on_write;
    WorkingFloatspace scale_in_colorspace;

    float sharpen_percent_goal;

    flow_compositing_mode compositing_mode;
    // When using compositing mode blend_with_matte, this color will be used. We should probably define this as always
    // being sRGBA, 4 bytes.
    uint8_t matte_color[4];

    struct flow_scanlines_filter* filter_list;
};
bool flow_node_execute_render_to_canvas_1d(Context* c, struct flow_job* job, BitmapBgra* input, BitmapBgra* canvas,
                                           struct flow_nodeinfo_render_to_canvas_1d* info);
int32_t flow_node_create_render1d(Context* c, struct flow_graph** g, int32_t prev_node, bool transpose_on_write,
                                  int32_t scale_to_width, WorkingFloatspace scale_and_filter_in_colorspace,
                                  float sharpen_percent, struct flow_scanlines_filter* filter_list,
                                  InterpolationFilter interpolation_filter);
typedef enum FLOW_DIRECTION { FLOW_OUTPUT = 8, FLOW_INPUT = 4 } FLOW_DIRECTION;