imageflow_advanced.h

struct flow_interpolation_details;
struct flow_interpolation_line_contributions;
struct flow_convolution_kernel;
////////////////////////////////////////////
// Deal with bitmaps

// non-indexed bitmap
struct flow_bitmap_bgra {

    // bitmap width in pixels
    uint32_t w;
    // bitmap height in pixels
    uint32_t h;
    // byte length of each row (may include any amount of padding)
    uint32_t stride;
    // pointer to pixel 0,0; should be of length > h * stride
    unsigned char * pixels;
    // If true, we don't dispose of *pixels when we dispose the struct
    bool borrowed_pixels;
    // If false, we can even ignore the alpha channel on 4bpp
    bool alpha_meaningful;
    // If false, we can edit pixels without affecting the stride
    bool pixels_readonly;
    // If false, we can change the stride of the image.
    bool stride_readonly;

    // If true, we can reuse the allocated memory for other purposes.
    bool can_reuse_space;

    flow_pixel_format fmt;

    // When using compositing mode blend_with_matte, this color will be used. We should probably define this as always
    // being sRGBA, 4 bytes.
    uint8_t matte_color[4];

    flow_bitmap_compositing_mode compositing_mode;
};
typedef double (*flow_detailed_interpolation_method)(const struct flow_interpolation_details *, double);
struct flow_interpolation_details {
    // 1 is the default; near-zero overlapping between windows. 2 overlaps 50% on each side.
    double window;
    // Coefficients for bucubic weighting
    double p1, p2, p3, q1, q2, q3, q4;
    // Blurring factor when > 1, sharpening factor when < 1. Applied to weights.
    double blur;

    // pointer to the weight calculation function
    flow_detailed_interpolation_method filter;
    // How much sharpening we are requesting
    float sharpen_percent_goal;
};
struct flow_convolution_kernel {
    float * kernel;
    uint32_t width;
    uint32_t radius;
    float threshold_min_change; // These change values are on a somewhat arbitrary scale between 0 and 4;
    float threshold_max_change;
    float * buffer;
};
struct flow_RenderDetails {
    // Interpolation and scaling details
    struct flow_interpolation_details * interpolation;
    // How large the interoplation window needs to be before we even attempt to apply a sharpening
    // percentage to the given filter
    float minimum_sample_window_to_interposharpen;

    // If possible to do correctly, halve the image until it is [interpolate_last_percent] times larger than needed. 3
    // or greater reccomended. Specify -1 to disable halving.
    float interpolate_last_percent;

    // The number of pixels (in target canvas coordinates) that it is acceptable to discard for better halving
    // performance
    float havling_acceptable_pixel_loss;

    // The actual halving factor to use.
    uint32_t halving_divisor;

    // The first convolution to apply
    struct flow_convolution_kernel * kernel_a;
    // A second convolution to apply
    struct flow_convolution_kernel * kernel_b;

    // If greater than 0, a percentage to sharpen the result along each axis;
    float sharpen_percent_goal;

    // If true, we should apply the color matrix
    bool apply_color_matrix;

    float color_matrix_data[25];
    float * color_matrix[5];

    // Transpose, flipx, flipy - combined, these give you all 90 interval rotations
    bool post_transpose;
    bool post_flip_x;
    bool post_flip_y;

    // Enables profiling
    bool enable_profiling;
};
PUB struct flow_bitmap_bgra * flow_bitmap_bgra_create(flow_c * c, int sx, int sy, bool zeroed,
                                                      flow_pixel_format format);
PUB struct flow_bitmap_bgra * flow_bitmap_bgra_create_header(flow_c * c, int sx, int sy);
PUB void flow_bitmap_bgra_destroy(flow_c * c, struct flow_bitmap_bgra * im);
PUB bool flow_bitmap_bgra_flip_horizontal(flow_c * c, struct flow_bitmap_bgra * b);
PUB bool flow_bitmap_bgra_compare(flow_c * c, struct flow_bitmap_bgra * a, struct flow_bitmap_bgra * b,
                                  bool * equal_out);
PUB struct flow_RenderDetails * flow_RenderDetails_create(flow_c * c);
PUB struct flow_RenderDetails * flow_RenderDetails_create_with(flow_c * c, flow_interpolation_filter filter);
PUB bool flow_RenderDetails_render(flow_c * c, struct flow_RenderDetails * details, struct flow_bitmap_bgra * source,
                                   struct flow_bitmap_bgra * canvas);
PUB bool flow_RenderDetails_render_in_place(flow_c * c, struct flow_RenderDetails * details,
                                            struct flow_bitmap_bgra * edit_in_place);
PUB void flow_RenderDetails_destroy(flow_c * c, struct flow_RenderDetails * d);
PUB bool flow_interpolation_filter_exists(flow_interpolation_filter filter);
PUB struct flow_interpolation_details * flow_interpolation_details_create(flow_c * c);
PUB struct flow_interpolation_details *
flow_interpolation_details_create_bicubic_custom(flow_c * c, double window, double blur, double B, double C);
PUB struct flow_interpolation_details *
flow_interpolation_details_create_custom(flow_c * c, double window, double blur,
                                         flow_detailed_interpolation_method filter);
PUB struct flow_interpolation_details * flow_interpolation_details_create_from(flow_c * c,
                                                                               flow_interpolation_filter filter);
PUB double flow_interpolation_details_percent_negative_weight(const struct flow_interpolation_details * details);
PUB void flow_interpolation_details_destroy(flow_c * c, struct flow_interpolation_details *);
struct flow_interpolation_line_contributions {
    struct flow_interpolation_pixel_contributions * ContribRow; /* Row (or column) of contribution weights */
    uint32_t WindowSize; /* Filter window size (of affecting source pixels) */
    uint32_t LineLength; /* Length of line (no. or rows / cols) */
    double percent_negative; /* Estimates the sharpening effect actually applied*/
};
PUB struct flow_interpolation_line_contributions *
flow_interpolation_line_contributions_create(flow_c * c, const uint32_t output_line_size,
                                             const uint32_t input_line_size,
                                             const struct flow_interpolation_details * details);
PUB void flow_interpolation_line_contributions_destroy(flow_c * c, struct flow_interpolation_line_contributions * p);
PUB struct flow_convolution_kernel * flow_convolution_kernel_create(flow_c * c, uint32_t radius);
PUB void flow_convolution_kernel_destroy(flow_c * c, struct flow_convolution_kernel * kernel);
PUB struct flow_convolution_kernel * flow_convolution_kernel_create_guassian(flow_c * c, double stdDev,
                                                                             uint32_t radius);
// The only error these 2 could generate would be a null pointer. Should they have a context just for this?
PUB double flow_convolution_kernel_sum(struct flow_convolution_kernel * kernel);
PUB void flow_convolution_kernel_normalize(struct flow_convolution_kernel * kernel, float desiredSum);
PUB struct flow_convolution_kernel * flow_convolution_kernel_create_gaussian_normalized(flow_c * c, double stdDev,
                                                                                        uint32_t radius);
PUB struct flow_convolution_kernel * flow_convolution_kernel_create_guassian_sharpen(flow_c * c, double stdDev,
                                                                                     uint32_t radius);
PUB bool flow_bitmap_bgra_populate_histogram(flow_c * c, struct flow_bitmap_bgra * bmp, uint64_t * histograms,
                                             uint32_t histogram_size_per_channel, uint32_t histogram_count,
                                             uint64_t * pixels_sampled);